# Academy-Course-DAT31055

./: Arrays.md  CHANGELOG.md  CMakeLists.bak  CMakeLists.txt  FFT.md  Functions.md  Geometry.md  LICENSE.txt  MemberFunctions.md  Overview.md  README.md  Random.md  Solvers.md  Statistics.md  TODO.md  conanfile.txt  main.py  numpymatrix.py  requirements.txt  setup.py
src/: arma.cpp  eigen.cpp  numpy_test.py
tests/: test_defmatrix.py  test_interaction.py  test_masked_matrix.py  test_matrix_linalg.py  test_multiarray.py  test_numeric.py  test_regression.py
